--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#BABABA</color>
     <color name="light_blue">#4A58A1</color>
+    <color name="light_blue2">#949FD8</color>
 </resources>
