--- a/app/src/main/res/layout/activity_search_result_detail.xml
+++ b/app/src/main/res/layout/activity_search_result_detail.xml
@@ -6,6 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".activities.SearchResultDetailActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            app:layout_scrollFlags="scroll|enterAlways">
+
+            <ImageView
+                android:id="@+id/search_result_detail_back_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_back_24" />
+
+            <TextView
+                android:id="@+id/search_result_toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:layout_marginStart="40dp"
+                tools:text="검색어"/>
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <TextView
+            android:text="마음에 드는 사진을 '저장'해보아요"
+            android:padding="5dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:background="@color/light_blue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <ImageView
         android:id="@+id/search_result_detail_image"
         android:layout_width="match_parent"
@@ -16,15 +57,36 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.3" />
 
     <ImageView
-        android:id="@+id/search_result_detail_likes_image"
+        android:id="@+id/search_result_detail_likes_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/unlike_image"
         android:layout_margin="20dp"
-        app:layout_constraintTop_toTopOf="@id/search_result_detail_image"
-        app:layout_constraintEnd_toEndOf="@id/search_result_detail_image"/>
+        android:src="@drawable/unlike_image"
+        app:layout_constraintEnd_toEndOf="@id/search_result_detail_image"
+        app:layout_constraintTop_toTopOf="@id/search_result_detail_image" />
+
+    <ImageView
+        android:id="@+id/search_result_detail_share_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_baseline_share_24"
+        app:layout_constraintEnd_toStartOf="@id/search_result_detail_likes_button"
+        app:layout_constraintTop_toTopOf="@id/search_result_detail_image" />
+
+    <Button
+        android:id="@+id/search_result_detail_save_button"
+        android:text="사진 저장하기"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
