--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -17,25 +17,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!--    <androidx.viewpager2.widget.ViewPager2-->
-    <!--        android:id="@+id/main_search_frag_viewpager"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_margin="20dp"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@id/main_search_frag_recommend_label">-->
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/main_search_frag_viewpager"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/main_search_frag_recommend_label"/>
 
 
-    <!--        <com.google.android.material.tabs.TabLayout-->
-    <!--            android:id="@+id/main_search_frag_indicator"-->
-    <!--            android:layout_width="0dp"-->
-    <!--            android:layout_height="45dp"-->
-    <!--            app:layout_constraintEnd_toEndOf="parent"-->
-    <!--            app:layout_constraintStart_toStartOf="parent"-->
-    <!--            app:layout_constraintTop_toBottomOf="@id/main_search_frag_viewpager" />-->
-
-    <!--    </androidx.viewpager2.widget.ViewPager2>-->
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/main_search_frag_indicator"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/main_search_frag_viewpager" />
 
 
     <TextView
