--- a/app/src/main/res/layout/fragment_main_pick.xml
+++ b/app/src/main/res/layout/fragment_main_pick.xml
@@ -4,16 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.MainPickFragment">
+    tools:context=".fragment.MainPickFragment"
+    android:background="@color/light_blue2">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/toolbar_function_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/light_blue">
 
     <TextView
         android:id="@+id/main_pick_frag_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
         android:text="내가 찜한 사진"
         android:textStyle="bold"
+        android:textColor="@color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -21,18 +32,22 @@
     <TextView
         android:id="@+id/main_pick_frag_delete_all"
         android:text="모두 지우기"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@id/main_pick_frag_label"/>
+        app:layout_constraintTop_toTopOf="@id/main_pick_frag_label"
+        app:layout_constraintBottom_toBottomOf="@id/main_pick_frag_label"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_pick_frag_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_pick_frag_label"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbar_function_layout"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
