World In Album - 검색어 listview 에 추가, 클릭시 삭제
1. 검색어 리스트뷰로 추가
2. 리스트뷰 아이템 클릭시 해당 아이템 삭제

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -57,4 +57,13 @@
 
     </com.google.android.material.appbar.MaterialToolbar>
 
+    <ListView
+        android:id="@+id/search_term_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_top_toolbar"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
