--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+
+    <data>
+        <variable
+            name="searchActivity"
+            type="com.example.worldinalbum.activities.SearchActivity" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -67,3 +74,4 @@
         app:layout_constraintTop_toBottomOf="@id/search_top_toolbar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
