--- a/app/src/main/res/layout/activity_search_result_detail.xml
+++ b/app/src/main/res/layout/activity_search_result_detail.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+
+    <data>
+        <variable
+            name="searchResultDetailActivity"
+            type="com.example.worldinalbum.activities.SearchResultDetailActivity" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -93,3 +100,4 @@
         app:layout_constraintVertical_bias="0.8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
