--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="mainSearchFragment"
+            type="com.example.worldinalbum.fragment.MainSearchFragment" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -69,3 +75,4 @@
         app:layout_constraintTop_toBottomOf="@id/today_good_word_label" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
